<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MCN EduCast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_nodelist">Servers</string>
    <string name="settings_title">Settings</string>
    <string name="capture_selection">Capture Selection</string>    
    <string name="enable_audio">Enable Audio</string>
    <string name="enable_video">Enable Video</string>
    <string name="segment_duration">Segment Duration (seconds)</string>
    <string name="video_bitrate">Video Bitrate (Mbps)</string>     
    <string name="video_resolution">Video Resolution</string>         
    <string name="audio_source">Audio Source</string>
    <string name="mux_type">Mux Type</string>
    <string name="audio_codec_type">Audio Codec</string>
    <string name="video_codec_type">Video Codec</string>         
    <string name="server_list">Publish Server List</string>
    <string name="server_config">Publish Server Configuration</string>    
    <string name="node_add">Add Server</string>
    <string name="node_clear_all">Clear All</string>   
    <string name="share_mpd_link">Share Streaming Link</string>  
    <string name="show_file">Show File</string>     
    <string name="is_live_stream">Live Stream</string>         
</resources>
