<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
      <LinearLayout 	    
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/capture_selection"
	        android:layout_marginBottom="5dp"
	    />
	    <CheckBox
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/enable_audio"
	        android:text="@string/enable_audio" 
	        android:checked="false" />
	   
	   <CheckBox
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/enable_video" 
	        android:layout_gravity ="right"
	        android:checked="true" 
	        android:id="@+id/enable_video" />
	   <CheckBox
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/is_live_stream" 
	        android:layout_gravity ="right"
	        android:checked="true" 
	        android:id="@+id/is_live_stream" />
	   	
	       <!-- Text Label -->
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/segment_duration"
	        android:layout_marginBottom="5dp"
	    />
	    <!-- Spinner Element -->
	    <Spinner
	        android:id="@+id/segment_duration"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/segment_duration"
	    />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/audio_source"
	        android:layout_marginBottom="5dp"
	    />
	    <!-- Spinner Element -->
	    <Spinner
	        android:id="@+id/audio_source"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/audio_source"
	    />    

	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/mux_type"
	        android:layout_marginBottom="5dp"
	    />
	    <!-- Spinner Element -->
	    <Spinner
	        android:id="@+id/mux_type"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/mux_type"
	    />    

	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/audio_codec_type"
	        android:layout_marginBottom="5dp"
	    />

	    <Spinner
	        android:id="@+id/audio_codec_type"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/audio_codec_type"
	    />    

	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/video_codec_type"
	        android:layout_marginBottom="5dp"
	    />

	    <Spinner
	        android:id="@+id/video_codec_type"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/video_codec_type"
	    />    
	    	    	    	    	    	    	    	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/video_bitrate"
	        android:layout_marginBottom="5dp"
	    />
	    <!-- Spinner Element -->
	    <Spinner
	        android:id="@+id/video_bitrate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/video_bitrate"
	    />    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/video_resolution"
	        android:layout_marginBottom="5dp"
	    />
	    <!-- Spinner Element -->
	    <Spinner
	        android:id="@+id/video_resolution"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/video_resolution"
	    />        
	    <Button
	        android:layout_marginTop="30dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/restart"
	        android:onClick="selfRestart"
	        android:text="Save Settings" />       
      </LinearLayout>
	</ScrollView>
</LinearLayout>
