<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

      <LinearLayout 	    
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/server_list"
	        android:layout_marginBottom="5dp"
	    />
		<ListView
        	android:id="@+id/node_list"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:drawSelectorOnTop="false"
    	/>	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/node_url"
	        android:inputType="textUri"
	        android:checked="false" />
	   
	    <Button
	        android:layout_marginTop="30dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/node_add"
	        android:onClick="onAddRemoteNode"
	        android:text="@string/node_add" />       
	    <Button
	        android:layout_marginTop="30dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/node_clear_all"
	        android:onClick="onClearAllNodes"
	        android:text="@string/node_clear_all" />       	        
      </LinearLayout>

</LinearLayout>
